; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_wrstabs.c_stab_complex_type.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_wrstabs.c_stab_complex_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stab_write_handle = type { i64 }

@.str = private unnamed_addr constant [15 x i8] c"%ld=r%ld;%u;0;\00", align 1
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @stab_complex_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stab_complex_type(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.stab_write_handle*, align 8
  %6 = alloca [50 x i8], align 16
  %7 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i8*, i8** %3, align 8
  %9 = bitcast i8* %8 to %struct.stab_write_handle*
  store %struct.stab_write_handle* %9, %struct.stab_write_handle** %5, align 8
  %10 = load %struct.stab_write_handle*, %struct.stab_write_handle** %5, align 8
  %11 = getelementptr inbounds %struct.stab_write_handle, %struct.stab_write_handle* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  store i64 %12, i64* %7, align 8
  %13 = load %struct.stab_write_handle*, %struct.stab_write_handle** %5, align 8
  %14 = getelementptr inbounds %struct.stab_write_handle, %struct.stab_write_handle* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = add nsw i64 %15, 1
  store i64 %16, i64* %14, align 8
  %17 = getelementptr inbounds [50 x i8], [50 x i8]* %6, i64 0, i64 0
  %18 = load i64, i64* %7, align 8
  %19 = load i64, i64* %7, align 8
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @sprintf(i8* %17, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i64 %18, i64 %19, i32 %20)
  %22 = load %struct.stab_write_handle*, %struct.stab_write_handle** %5, align 8
  %23 = getelementptr inbounds [50 x i8], [50 x i8]* %6, i64 0, i64 0
  %24 = load i64, i64* %7, align 8
  %25 = load i32, i32* @TRUE, align 4
  %26 = load i32, i32* %4, align 4
  %27 = mul i32 %26, 2
  %28 = call i32 @stab_push_string(%struct.stab_write_handle* %22, i8* %23, i64 %24, i32 %25, i32 %27)
  ret i32 %28
}

declare dso_local i32 @sprintf(i8*, i8*, i64, i64, i32) #1

declare dso_local i32 @stab_push_string(%struct.stab_write_handle*, i8*, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
